# tiny-web

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  ListErrors.text  README.md  SECURITY.md  init.sample.toml  install.sql  lib-install-mssql.sql  lib-install-pgsql.sql  lib-install.sql  rustfmt.toml  tiny.sample.conf  tiny.sample.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: rust.yml
doc/: Access.md  Action.md  Answer.md  Basic.md  Caching.md  Call.md  Config.md  Controller.md  Data.md  Database.md  Email.md  Example.md  Example_db.md  Example_html.md  Example_lang.md  Example_run.md  Example_rust.md  Files.md  First.md  Functions.md  General.md  I18N.md  Index.md  Net.md  Nginx.md  Performance.md  Request.md  Response.md  Router.md  Sessions.md  Template.md  Todo.md
example/: Cargo.toml  LICENSE  install.sql  tiny.sample.toml  tiny.toml
example/app/index/index/: foot.html  head.html  index.html  lang.en  lang.uk  not_found.html
example/app/review/index/: index.html  lang.en  lang.uk  list.html
example/src/: main.rs
example/src/app/: mod.rs
example/src/app/index/: index.rs
example/src/app/review/: index.rs
example/www/css/: styles.css
sql/: lib-install-mssql.sql  lib-install-mysql.sql  lib-install-pgsql.sql  lib-mssql.sql  lib-pgsql.sql
src/: help.rs  lib.rs  tool.rs
src/sys/: action.rs  app.rs  cache.rs  data.rs  db.rs  db_one.rs  file.rs  go.rs  html.rs  init.rs  lang.rs  log.rs  mail.rs  mod.rs  pool.rs  request.rs  response.rs  route.rs  session.rs  tool.rs  worker.rs  wrlock.rs
src/sys/app/: app.rs  arg.rs  init.rs  mod.rs  run.rs
src/sys/db/: adapter.rs  mod.rs  mssql.rs  pgsql.rs
src/sys/dbs/: adapter.rs  mod.rs  mssql.rs  pgsql.rs  without_sql.rs
src/sys/net/: fastcgi.rs  http.rs  mod.rs  scgi.rs  stream.rs  uwsgi.rs  worker.rs
src/sys/stat/: mod.rs  stat.rs
src/sys/web/: action.rs  cache.rs  data.rs  file.rs  html.rs  lang.rs  mail.rs  mod.rs  request.rs  response.rs  session.rs
src/sys/workers/: fastcgi.rs  grpc.rs  http.rs  mod.rs  scgi.rs  uwsgi.rs  websocket.rs
