[package]
name = "tiny-web"
authors = ["Volodymyr Zamkovyi <v.zamkovyi@gmail.com>"]
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "tiny-web is a tiny async library (backend web server) that allows you to write a Laravel-style or Django-style backend in Rust language."
keywords = ["web", "server", "backend", "fastcgi", "async"]
repository = "https://github.com/tryteex/tiny-web"
exclude = ["example", "doc"]

[dependencies]
tiny-web-macro="0.1.5"
chrono = { version = "0.4.35", features = ["serde"] }
sha3 = "0.10.8"
native-tls = "0.2.11"
postgres-native-tls = "0.5.0"
postgres = { version = "0.19.7", features = ["with-chrono-0_4"] }
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
tokio = { version = "1.36.0", features = ["full"] }
num_cpus = "1.16.0"
bincode = "1.3.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
toml = "0.8.12"
hpack = "0.3.0"
uuid = "1.8"
lettre = { version = "0.11.4", features = ["smtp-transport", "sendmail-transport", "file-transport", "tokio1-native-tls", "serde"] }