[package]
name = "tiny-web"
authors = ["Volodymyr Zamkovyi <v.zamkovyi@gmail.com>"]
version = "0.5.1"
edition = "2021"
license = "MIT"
description = "tiny-web is a tiny async library (backend web server) that allows you to write a Laravel-style or Django-style backend in Rust language."
keywords = ["web", "server", "backend", "fastcgi", "async"]
repository = "https://github.com/tryteex/tiny-web"
exclude = ["example", "doc"]

[dependencies]
tiny-web-macro="0.1.5"
chrono = { version = "0.4", features = ["serde"] }
ring = "0.17"
sha3 = "0.10"
futures-util = "0.3"
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
rustls = { version = "0.23", default-features = false }
x509-certificate = {version = "0.23", default-features = false }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
tokio-rustls = { version = "0.26", default-features = false }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
byteorder = "1.5"
tiberius = { version = "0.12", default-features = false, features = ["tds73", "chrono", "rustls", "rust_decimal", "bigdecimal"]}
num_cpus = "1"
bincode = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
hpack = "0.3"
uuid = "1"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "hostname", "builder", "sendmail-transport", "file-transport", "tokio1-rustls-tls", "serde"] }