[package]
name = "tiny-demo"
authors = ["Volodymyr Zamkovyi <v.zamkovyi@gmail.com>"]
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "tiny-demo is a demo site for tiny-web library."

[dependencies]
tiny-web-macro="0.1.5"
tiny-web="0.5.0"

[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3